force-app/main/default/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Code_Text__c</fullName>
        <label>Activity Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_No_Value__c</fullName>
        <formula>VALUE( Activity_No__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity No Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_No__c</fullName>
        <label>Activity No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Activities (Code Group)</relationshipLabel>
        <relationshipName>Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Text__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Text</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Activities (Code Text)</relationshipLabel>
        <relationshipName>Activities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Activities (Code)</relationshipLabel>
        <relationshipName>Activities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_in_Text_Form__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Damage Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Activities (Damage Code Group)</relationshipLabel>
        <relationshipName>Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <label>Integration Flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemActivity__c</fullName>
        <externalId>true</externalId>
        <label>ItemActivity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Part_Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Part Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_No__c</fullName>
        <label>Sort No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_of_Code__c</fullName>
        <label>Text of Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the Activity can be retrieved or not. Simulates soft deletion.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSOAP</label>
        <type>Checkbox</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Notification__c</columns>
        <columns>Code__c</columns>
        <columns>Code_Group__c</columns>
        <columns>Code_Text__c</columns>
        <columns>Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>